package Assignment7.Question1;

// Flyweight interface
public interface CharacterProperties {
    void display();
}
