
@startuml

class Character
class CharacterProperties
class CharacterPropertiesFactory
class Document

Character "1" -- "1" CharacterProperties : has
Document "0..*" *-- "1" Character
Document "1" -- "1" CharacterPropertiesFactory
CharacterPropertiesFactory "1" o-- "*" CharacterProperties : manages

class Document{
    - characters: List<Character>
    - propertiesFactory: CharacterPropertiesFactory
    + addCharacter(c: char, font: String, color: String, size: int): void
    + editCharacterProperties(index: int, font: String, color: String, size: int): void
    + saveToFile(filename: String): void
    + loadFromFile(filename: String): void
}

class Character{
    - character: char
    - characterProperty: CharacterProperties
    + Character(character: char, characterProperty: CharacterProperties)
    + setCharacter(character: char): void
    + setCharacterProperty(characterProperty: CharacterProperties): void
    + getCharacter(): char
    + getFont(): String
    + getColor(): String
    + getSize(): int
}

class CharacterPropertiesFactory{
    - flyweights: Map<String, CharacterProperties>
    + setAndRetrieveFlyweightCharacterProperties(font: String, color: String, size: int): CharacterProperties
    + sizeOfMap(): int
}

class CharacterProperties{
    - font: String
    - color: String
    - size: int
    + CharacterProperties(font: String, color: String, size: int)
    + getFont(): String
    + getColor(): String
    + getSize(): int
}

@enduml
